--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
-      - "5433:5432"
+      - "5431:5432"
 
   web:
     build: .
@@ -21,14 +21,9 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
-      - DJANGO_SECRET_KEY=${SECRET_KEY}
-      - DEBUG=${DEBUG}
-      - DATABASE_NAME=${POSTGRES_DB}
-      - DATABASE_USER=${POSTGRES_USER}
-      - DATABASE_PASSWORD=${POSTGRES_PASSWORD}
-      - DATABASE_HOST=db
-      - DATABASE_PORT=5432
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     depends_on:
       - db
     env_file:
@@ -36,10 +31,10 @@ services:
   pgadmin:
     image: dpage/pgadmin4
     environment:
-      - PGADMIN_DEFAULT_EMAIL:${PGADMIN_DEFAULT_EMAIL} # Email đăng nhập cho pgAdmin
-      - PGADMIN_DEFAULT_PASSWORD:${PGADMIN_DEFAULT_PASSWORD}           # Mật khẩu cho pgAdmin
+      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL} # Email đăng nhập cho pgAdmin
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}           # Mật khẩu cho pgAdmin
     ports:
-      - "5050:80"                                  # Ánh xạ cổng để truy cập pgAdmin
+      - "85:80"                                  # Ánh xạ cổng để truy cập pgAdmin
     depends_on:
       - db
 
