--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.7'
-
 services:
 
   db:
@@ -12,6 +10,8 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5431:5432"
+    env_file:
+      - .env
 
   web:
     build: .
@@ -28,15 +28,18 @@ services:
       - db
     env_file:
       - .env
+
   pgadmin:
     image: dpage/pgadmin4
     environment:
       - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL} # Email đăng nhập cho pgAdmin
-      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}           # Mật khẩu cho pgAdmin
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD} # Mật khẩu cho pgAdmin
     ports:
-      - "85:80"                                  # Ánh xạ cổng để truy cập pgAdmin
+      - "85:80" # Ánh xạ cổng để truy cập pgAdmin
     depends_on:
       - db
+    env_file:
+      - .env
 
 volumes:
   postgres_data:
