--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,6 +38,6 @@ jobs:
             fi
             cd CN_CNPM
             git pull origin master
-            docker-compose up --build -d 
+            sudo docker-compose up --build -d 
             sudo systemctl restart gunicorn
           EOF
