--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,8 @@ services:
       - "8000:8000"
     depends_on:
       - db
-
+    env_file:
+      - .env
   nginx:
     image: nginx:alpine
     volumes:
