--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,13 +24,10 @@ jobs:
       - name: Đăng nhập vào Docker
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build Docker image
-        run: |
-          docker build -t your-docker-image-name:latest .  # Thay your-docker-image-name bằng tên của bạn
-
+     
   deploy:
     runs-on: ubuntu-latest
-    needs: build  # Bước này cần hoàn thành trước khi thực hiện deploy
+    needs: build  
 
     steps:
       - name: Set up SSH
@@ -49,6 +46,5 @@ jobs:
             git pull origin master
             sudo docker-compose down
             sudo docker-compose up --build -d 
-            sudo docker-compose exec web python manage.py collectstatic --noinput  # Thu thập tệp tĩnh
             sudo systemctl restart gunicorn
           EOF
