--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,64 +13,74 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    # check code tu repo
     steps:
+      # 1. Checkout code từ repo
       - name: Checkout code
         uses: actions/checkout@v2
-    # thiet lap moi truong
+
+      # 2. Thiết lập môi trường
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.10'
 
-      - name: Install dependecies
+      # 3. Cài đặt dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # 4. Đăng nhập vào Docker
       - name: Đăng nhập vào Docker
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      # 5. Xây dựng Docker Image
       - name: Build Docker Image
         run: |
           docker build -t app:latest .
           docker tag app:latest hoangduy00998/app:latest
       
+      # 6. Thông báo kết quả build
       - name: Notify build outcome
-        run: |
         if: failure()
-        run: echo "Build failed" | mail -s "Build Notifications" hoangduy00998#gmail.com
+        run: echo "Build failed" | mail -s "Build Notifications" hoangduy00998@gmail.com
 
   test: 
     runs-on: ubuntu-latest
     needs: build
 
     steps:
+      # 1. Checkout code từ repo
       - name: Checkout code
-        users: actions/checkout@v2
+        uses: actions/checkout@v2
 
+      # 2. Chạy các bài kiểm tra
       - name: Run tests
         run: |
           python manage.py test
 
+      # 3. Thông báo kết quả test
       - name: Notify test outcome
         if: failure()
-        run: echo "test failed" | mail -s "Test Notification" hoangduy0998@gmail.com
-
+        run: echo "Test failed" | mail -s "Test Notification" hoangduy00998@gmail.com
 
   deploy_to_production:
     runs-on: ubuntu-latest
     needs: test
     if: success()
     steps:
+      # 1. Checkout code từ repo
       - name: Checkout code
-        users: actions/checkout@v2
+        uses: actions/checkout@v2
 
-      - name: Push Docker image to Docker hub
+      # 2. Đẩy Docker image lên Docker Hub
+      - name: Push Docker image to Docker Hub
         run: |
           docker push hoangduy00998/app:latest
 
+      # 3. Triển khai lên môi trường Production
       - name: Deploy to Production
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@cnpm.duytech.site "cd CN_CNPM && git pull origin main && docker-compose up --build"
+          ssh -o StrictHostKeyChecking=no ubuntu@cnpm.duytech.site "cd CN_CNPM && git pull origin master && docker-compose up --build"
