--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,6 +24,8 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Set environment variables
+        run: echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> $GITHUB_ENV
       # 3. Cài đặt dependencies
       - name: Install dependencies
         run: |
@@ -58,7 +60,7 @@ jobs:
       - name: Run tests
         run: |
           pip install -r requirements.txt
-          python ./backend/manage.py ./backend/api/test
+          python ./backend/manage.py ./backend/api/tests
 
       # 3. Thông báo kết quả test
       - name: Notify test outcome
