--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -63,7 +63,7 @@ jobs:
         
       - name: Run tests
         run: |
-          python manage.py test
+          python .backend/manage.py test
           
       # 3. Thông báo kết quả test
       - name: Notify test outcome
