--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,6 +24,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.10"
+          
+      - name: List files in the current directory
+        run: ls -R  # Liệt kê tất cả các file và thư mục
 
       # 3. Cài đặt dependencies
       - name: Install dependencies
