--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.10"
-          
+
       - name: List files in the current directory
         run: ls -R  # Liệt kê tất cả các file và thư mục
 
@@ -66,7 +66,7 @@ jobs:
         
       - name: Run tests
         run: |
-          python .backend/manage.py test
+          python /backend/manage.py test /backend/api/test
           
       # 3. Thông báo kết quả test
       - name: Notify test outcome
