update ci cd flow

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,8 +50,8 @@ jobs:
           DJANGO_SECRET_KEY: ${{ secrets.SECRET_KEY }}
         run: |
           cd backend
-          python manage.py test api/tests
-
+          python manage.py test
+          
   deploy_to_production:
     runs-on: ubuntu-latest
     needs: test
