--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt
+          pip install -r requirements.txt
 
       - name: Run tests
         env:
@@ -51,7 +51,7 @@ jobs:
         run: |
           cd backend
           python manage.py test
-          
+
   deploy_to_production:
     runs-on: ubuntu-latest
     needs: test
