--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     depends_on:
       - db
     env_file:
-      - .env
+      - backend/.env
   pgadmin:
     image: dpage/pgadmin4
     environment:
